--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "base85",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -10,10 +10,13 @@
   "license": "MIT",
   "devDependencies": {
     "assert": "^1.3.0",
-    "coveralls": "^2.11.9",
+    "coveralls": "^3.0.3",
     "istanbul": "^0.4.3",
-    "mocha": "^2.4.5",
+    "mocha": "^6.1.4",
     "mocha-lcov-reporter": "^1.2.0",
-    "should": "^8.3.1"
+    "should": "^13.2.3"
+  },
+  "engines" : {
+    "node" : ">=10.8"
   }
 }
