--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "base85",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "mocha test --timeout 20s && istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec"
   },
-  "author": "afzaalace",
+  "author": "brahma-dev",
   "license": "MIT",
   "devDependencies": {
     "assert": "^1.3.0",
@@ -16,7 +16,7 @@
     "mocha-lcov-reporter": "^1.2.0",
     "should": "^13.2.3"
   },
-  "engines" : {
-    "node" : ">=10.8"
+  "engines": {
+    "node": ">=10.8"
   }
 }
